--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/vue-charts": "^1.0.4",
+    "axios": "^1.7.7",
     "vue": "^3.5.12"
   },
   "devDependencies": {
