--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@canvasjs/vue-charts": "^1.0.4",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "vue": "^3.5.12"
   },
   "devDependencies": {
