--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@canvasjs/vue-charts": "^1.0.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
